# histogram-dev

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Make.mm  README.md  actions.yml  build-gh-pages  environment.yml  environment_conda_only.yml  pyproject.toml  pytest.ini  rpm.spec.in  setup.py  setup_histogram.py  test0-compressed.h5  test0.h5  test_dump_load_1a.h5  test_dump_load_1b.h5  test_dump_load_1c.h5  test_dump_load_hdf5_1d.h5  test_slice_and_dump.h5  testdump1.h5  tmp.h5  tmp.pkl
.github/workflows/: actions.yml
applications/: Make.mm  PlotHist.py  __init__.py
applications/gui/: ControlPanel.py  HistInfoPanel.py  HistNotebook.py  HistPanel.py  HistPlotPanel.py  LowerPanel.py  MainFrame.py  MainPanel.py  MainWinApp.py  Make.mm  UpperPanel.py  __init__.py  histogramGui.py  histogramInfo.gml
applications/gui/controllers/: MainController.py  Make.mm  Tools.py
applications/gui/examples/: I(vel).pkl  spehist.pkl
applications/gui/tools/: Make.mm  __init__.py  raw_data.py
applications/gui/wxmpl/: Make.mm  README
applications1/: PlotHist.py
applications1/gui/: HistogramGUIApp.py  __init__.py  testhistogram.py
applications1/gui/models/: ModelContainer.py
applications1/gui/tools/: Reduction.py  WebAppTools.py
conda.recipe/: _build.sh  build.sh  meta.yaml
docs/: Make.mm  index.html
docs/DeveloperGuide/: Introduction.txml  Make.mm  NdArray.txml  main.xml  mydb2latex.xsl.t  mydocbook.xsl.t  scope.txml
docs/UserGuide/: CommandlineInterface.txml  HistogramGUI.txml  Introduction.txml  Make.mm  index.html  main.xml  scope.txml  txml2xml_html.py  txml2xml_pdf.py  webserver.py
docs/latex/: Make.mm  README  developer.lyx  developer2.lyx
docs/process/: HistogramGUIRequirements  HistogramGUIUseCases  Make.mm
docs/sphinx/: Make.mm  commands.rst  conf.py  gui.rst  index.rst  install-details.rst  install.rst  intro.rst  python-interface.rst  requirements.txt
docs/sphinx/_static/: default.css
docs/sphinx/_templates/: layout.html
docs/sphinx/py/: intro.py  (+1 more)
docs/uml/: Make.mm  histogram-class-diagram.uml  histogram.uml
etc/: Make.mm
etc/HistogramGUIApp/: Make.mm
examples/: README
histogram/: Axis.py  AxisMapper.py  AxisMapperCreater.py  DEV_NOTES  DatasetBase.py  DiscreteAxisMapper.py  ErrorPropagator.py  EvenlyContinuousAxisMapper.py  Histogram.py  Make.mm  NdArrayDataset.py  SimpleHistCollection.py  StdvectorDataset.py  __init__.py  _loop.py  _units.py  data_plotter.py  hpickle.py  plotter.py  pylab_extensions.py
histogram/hdf/: Loader.py  Make.mm  Parser.py  Renderer.py  __init__.py
histogram/ins/: ARCSDetHistCollection.py  DetPixTOFData.py  DetectorsTOFData.py  Make.mm  MonitorData.py  SModQEData.py  SPhiEData.py  TOFPixelData.py  VanadiumData.py
histogram/pyrecomponents/: Make.mm
lib/: Array_1D.cc  Array_1D.h  Array_1D.icc  AxisMapper.h  CMakeLists.txt  DataGrid1D.h  DataGrid2D.h  EvenlySpacedAxisMapper.h  EvenlySpacedGridData_1D.h  EvenlySpacedGridData_2D.h  EvenlySpacedGridData_3D.h  EvenlySpacedGridData_4D.h  Exception.h  GridData_1D.h  GridData_2D.h  GridData_3D.h  Histogrammer.h  Ix.h  Ixy.h  Make.mm  NdArray.cc  NdArray.h  NdArray.icc  NdArraySlice.cc  NdArraySlice.h  NdArraySlice.icc  OutOfBound.h  README  _macros.h  events2EvenlySpacedIxxxx.h  events2EvenlySpacedIxy.h  events2Ix.cc  events2Ixxxx.h  events2Ixy.h  events2histogram.h
module/: exceptions.cc  exceptions.h  misc.cc  misc.h
ndarray/: AbstractNdArray.py  Make.mm  StdVectorNdArray.py  __init__.py
ndarray/converters/: Make.mm  StdVectorNdArray2NumpyNdArray.py  utils.py
obsolete/: Make.mm
python/: setup.py
python/histogram/: AttributeContBase.py  Axis.py  AxisMapperCreater.py  ContinuousAxisMapper.py  DEV_NOTES  DatasetBase.py  DatasetContainer.py  DetHistCollection.py  DictAttributeCont.py  DiscreteAxisMapper.py  ErrorPropagator.py  EvenlyContinuousAxisMapper.py  Histogram.py  Make.mm  NdArrayDataset.py  SimpleHistCollection.py  SimpleRebin.py  SlicingInfo.py  ValueWithError.py  __init__.py  _loop.py  _units.py  data_plotter.py  hpickle.py  plotter.py  pylab_extensions.py
python/histogram.egg-info/: PKG-INFO  SOURCES.txt
src/histogram/: Axis.py  AxisMapperCreater.py  ContinuousAxisMapper.py  DatasetBase.py  DatasetContainer.py  EvenlyContinuousAxisMapper.py  Histogram.py  NdArrayDataset.py  SimpleHistCollection.py  SimpleRebin.py  __init__.py  _loop.py  _units.py  hpickle.py  paths.py  plotter.py
src/lib/: Array_1D.h  CMakeLists.txt  EvenlySpacedAxisMapper.h  EvenlySpacedGridData_2D.h  Event2Quantity.cc  Event2Quantity.h  GridData_2D.h  GridData_4D.h  Make.mm  NdArraySlice.h  events2EvenlySpacedIx.h  events2Ix.h  events2Ixy.cc  local.def
tests/: .ARCSTest.rc  CMakeLists.txt  Make.mm  conftest.py  signon.py  test0-compressed.h5  test0.h5  test_Itof.cc  test_Itof2.cc  test_NdArray.cc  test_dump_load_1a.h5  test_dump_load_1b.h5  test_dump_load_1c.h5  test_dump_load_hdf5_1d.h5  test_slice_and_dump.h5  testdump1.h5  tmp.h5  unittestX.py
tests/data/: sqe.h5
tests/histogram/: Axis_TestCase.py  DatasetContainer_TestCase.py  Histogram_TestCase.py  Make.mm  NdArrayDataset_TestCase.py  SimpleHistCollection_TestCase.py  ValueWithError_TestCase.py  all_tk_tests.py  alltests.py  dataplotter_TestCase.py  hdf_TestCase.py  histogramTest_Axis.py  histogramTest_DatasetContainer.py  histogramTest_DictAttCont.py  histogramTest_Histogram.py  histogramTest_StdvectorDataset.py  histogram__init___TestCase.py  plotter_TestCase.py  run_histogramTests.py  test0-compressed.h5  test1.h5  test_dump_load2.h5  test_dump_load_1b.h5  test_dump_load_1c.h5  test_dump_load_hdf5.h5  test_dump_load_hdf5_1d.h5  test_load_slice_and_dump.h5  test_matplotlib_contourf.py  test_matplotlib_pcolor.py  test_slice_and_dump.h5  testdump1.h5  testload.h5  tmp.h5  utilities.py
tests/lib/: Make.mm  test_DataGrid1D.cc  test_DataGrid2D.cc  test_EvenlySpacedGridData_2D.cc  test_GridData_1D.cc  test_GridData_2D.cc  test_Itof2.cc  test_Ix.cc  test_Ixy.cc  test_NdArray.cc
tests/ndarray/: Make.mm  NdArray_TestCase.py  alltests.py
(+136 files in other folders)
