[project]
name = "histogram-dev"
description = "The histogram python package provides a simple yet fundamental data structure for scientific computing histogram"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
  "numpy >= 1.20.3,< 2.0",
  "pyre == 0.8.3",
  "journal==0.8.4"
]
license = { text = "MIT" }
keywords = ["neutrons", "histogram", "python"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutrons/histogram-dev"  # if no homepage, use repo url
repository = "https://github.com/neutrons/histogram-dev"
# documentation = add_url_to_readthedoc_here
#issues = ""

[build-system]
requires = [
  "setuptools>= 42",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/histogram/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["histogram/ndarray/converters*"]

[tool.setuptools.package-data]
"*" = [
    "*.h",
    "*.cc",
    "plothist",
    "*.icc"
]


[project.scripts]
histogram-cli = "histogram.Histogram:main"

# pytest.ini
[tool.pytest.ini_options]
norecursedirs = [".svn","_build","ndarray*"] # ignore tests in ndarray due to missing stdVector module not found
testpaths =[
    "tests"
]
python_files = ["*_TestCase.py","histogramTest_*.py"] #manually run python alltests.py will also return 145 tests
filterwarnings =[
    "ignore: Matplotlib is currently using ps, which is a non-GUI backend, so cannot show the figure."
]
